--- a/css/example.css
+++ b/css/example.css
@@ -3,6 +3,12 @@ body,
 .main-content {
   height: 100%;
 }
+.main-content{
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+}
 .app:not(.active) {
   background-color: #f2dede;
 }
