--- a/css/example.css
+++ b/css/example.css
@@ -9,11 +9,18 @@ body,
     margin: 0;
     padding: 0;
 }
-.app:not(.active) {
-  background-color: #f2dede;
+
+.tray.tray-cayamn{
+    color: rgba(255,255,255,0.7);
+    text-align: center;
+    background-color: #159957;
+    background-image: linear-gradient(120deg, #155799, #159957);
 }
-
-.app.active {
-  background-color: #428bca;
-
+.tray.tray-cayamn > .app:not(.active) {
+  background-color: rgba(255,255,255,0.08);
+}
+.tray.tray-cayamn > .app.active {
+    color: rgba(255,255,255,0.8);
+    background-color: #159957;
+    background-image: linear-gradient(120deg, #155799, #159957);
 }
