--- a/css/example.css
+++ b/css/example.css
@@ -10,16 +10,16 @@ body,
     padding: 0;
 }
 
-.tray.tray-cayamn{
+.app-tray.tray-cayamn{
     color: rgba(255,255,255,0.7);
     text-align: center;
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957);
 }
-.tray.tray-cayamn > .app:not(.active) {
+.app-tray.tray-cayamn > .app:not(.active) {
   background-color: rgba(255,255,255,0.08);
 }
-.tray.tray-cayamn > .app.active {
+.app-tray.tray-cayamn > .app.active {
     color: rgba(255,255,255,0.8);
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957);
