--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -3534,6 +3534,490 @@
 
 @media (min-width: 0px) {
   .app-tray:not(.app-open).app-size-auto > .app:not(.active) {
+    width: 25px;
+    height: 25px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon {
+    line-height: 25px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-xl {
+    font-size: 22.5px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-lg {
+    font-size: 20px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon,
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-md {
+    font-size: 17.5px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-sm {
+    font-size: 15px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-xs {
+    font-size: 12.5px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-2 {
+    width: 80px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-2 {
+    height: 80px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 80px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-3 {
+    width: 135px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-3 {
+    height: 135px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 135px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-4 {
+    width: 190px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-4 {
+    height: 190px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 190px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-5 {
+    width: 245px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-5 {
+    height: 245px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 245px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-2 {
+    width: 90px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-2 {
+    height: 90px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 90px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-3 {
+    width: 155px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-3 {
+    height: 155px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 155px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-4 {
+    width: 220px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-4 {
+    height: 220px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 220px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-5 {
+    width: 285px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-5 {
+    height: 285px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 285px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-2 {
+    width: 100px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-2 {
+    height: 100px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 100px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-3 {
+    width: 175px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-3 {
+    height: 175px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 175px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-4 {
+    width: 250px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-4 {
+    height: 250px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 250px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-5 {
+    width: 325px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-5 {
+    height: 325px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 325px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-2 {
+    width: 110px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-2 {
+    height: 110px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 110px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-3 {
+    width: 195px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-3 {
+    height: 195px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 195px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-4 {
+    width: 280px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-4 {
+    height: 280px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 280px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-5 {
+    width: 365px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-5 {
+    height: 365px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 365px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-2 {
+    width: 120px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-2 {
+    height: 120px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 120px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-3 {
+    width: 215px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-3 {
+    height: 215px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 215px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-4 {
+    width: 310px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-4 {
+    height: 310px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 310px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-5 {
+    width: 405px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-5 {
+    height: 405px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 405px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-2 {
+    width: 60px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-2 {
+    height: 60px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 60px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-3 {
+    width: 95px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-3 {
+    height: 95px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 95px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-4 {
+    width: 130px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-4 {
+    height: 130px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 130px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-5 {
+    width: 165px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-5 {
+    height: 165px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 165px;
+  }
+}
+
+@media (min-width: 230px) {
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) {
+    width: 50px;
+    height: 50px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon {
+    line-height: 50px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-xl {
+    font-size: 45px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-lg {
+    font-size: 40px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon,
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-md {
+    font-size: 35px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-sm {
+    font-size: 30px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) > .app-header.app-icon.app-icon-xs {
+    font-size: 25px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-2 {
+    width: 130px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-2 {
+    height: 130px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 130px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-3 {
+    width: 210px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-3 {
+    height: 210px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 210px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-4 {
+    width: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-4 {
+    height: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-span-5 {
+    width: 370px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-5 {
+    height: 370px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-1 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 370px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-2 {
+    width: 140px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-2 {
+    height: 140px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 140px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-3 {
+    width: 230px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-3 {
+    height: 230px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 230px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-4 {
+    width: 320px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-4 {
+    height: 320px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 320px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-span-5 {
+    width: 410px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-5 {
+    height: 410px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-2 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 410px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-2 {
+    width: 150px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-2 {
+    height: 150px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 150px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-3 {
+    width: 250px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-3 {
+    height: 250px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 250px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-4 {
+    width: 350px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-4 {
+    height: 350px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 350px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-span-5 {
+    width: 450px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-5 {
+    height: 450px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-3 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 450px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-2 {
+    width: 160px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-2 {
+    height: 160px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 160px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-3 {
+    width: 270px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-3 {
+    height: 270px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 270px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-4 {
+    width: 380px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-4 {
+    height: 380px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 380px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-span-5 {
+    width: 490px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-5 {
+    height: 490px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-4 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 490px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-2 {
+    width: 170px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-2 {
+    height: 170px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 170px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-3 {
+    width: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-3 {
+    height: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-4 {
+    width: 410px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-4 {
+    height: 410px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 410px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-span-5 {
+    width: 530px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-5 {
+    height: 530px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 530px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-2 {
+    width: 110px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-2 {
+    height: 110px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
+    line-height: 110px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-3 {
+    width: 170px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-3 {
+    height: 170px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
+    line-height: 170px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-4 {
+    width: 230px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-4 {
+    height: 230px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
+    line-height: 230px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-span-5 {
+    width: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active).app-height-span-5 {
+    height: 290px;
+  }
+  .app-tray:not(.app-open).app-size-auto.spacing-5 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
+    line-height: 290px;
+  }
+}
+
+@media (min-width: 340px) {
+  .app-tray:not(.app-open).app-size-auto > .app:not(.active) {
     width: 75px;
     height: 75px;
   }
