--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -26,9 +26,10 @@
   text-align: center;
   vertical-align: bottom;
 }
-
-.app-tray {
+.app-tray{
   width: 100%;
+}
+.app-tray.open {
   height: 100%;
 }
 
@@ -102,10 +103,6 @@
   height: 100%;
   width: 100%;
   opacity: 1;
-}
-
-.app.app-open {
-  padding: 0;
 }
 
 .app-tray.app-open .app {
