--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -3341,7 +3341,6 @@
 .app-tray:not(.app-open).spacing-1 > .app:not(.active) {
   width: 100px;
   height: 100px;
-  border-radius: 25px;
   margin: 15px;
 }
 
@@ -3356,12 +3355,10 @@
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-span-2 {
   width: 230px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-2 {
   height: 230px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
@@ -3370,12 +3367,10 @@
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-span-3 {
   width: 360px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-3 {
   height: 360px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
@@ -3384,12 +3379,10 @@
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-span-4 {
   width: 490px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-4 {
   height: 490px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
@@ -3398,12 +3391,10 @@
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-span-5 {
   width: 620px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-5 {
   height: 620px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-1 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
@@ -3417,7 +3408,6 @@
 .app-tray:not(.app-open).spacing-2 > .app:not(.active) {
   width: 100px;
   height: 100px;
-  border-radius: 25px;
   margin: 20px;
 }
 
@@ -3432,12 +3422,10 @@
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-span-2 {
   width: 240px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-2 {
   height: 240px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
@@ -3446,12 +3434,10 @@
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-span-3 {
   width: 380px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-3 {
   height: 380px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
@@ -3460,12 +3446,10 @@
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-span-4 {
   width: 520px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-4 {
   height: 520px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
@@ -3474,12 +3458,10 @@
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-span-5 {
   width: 660px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-5 {
   height: 660px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-2 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
@@ -3493,7 +3475,6 @@
 .app-tray:not(.app-open).spacing-3 > .app:not(.active) {
   width: 100px;
   height: 100px;
-  border-radius: 25px;
   margin: 25px;
 }
 
@@ -3508,12 +3489,10 @@
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-span-2 {
   width: 250px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-2 {
   height: 250px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
@@ -3522,12 +3501,10 @@
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-span-3 {
   width: 400px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-3 {
   height: 400px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
@@ -3536,12 +3513,10 @@
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-span-4 {
   width: 550px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-4 {
   height: 550px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
@@ -3550,12 +3525,10 @@
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-span-5 {
   width: 700px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-5 {
   height: 700px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-3 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
@@ -3569,7 +3542,6 @@
 .app-tray:not(.app-open).spacing-4 > .app:not(.active) {
   width: 100px;
   height: 100px;
-  border-radius: 25px;
   margin: 30px;
 }
 
@@ -3584,12 +3556,10 @@
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-span-2 {
   width: 260px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-2 {
   height: 260px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
@@ -3598,12 +3568,10 @@
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-span-3 {
   width: 420px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-3 {
   height: 420px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
@@ -3612,12 +3580,10 @@
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-span-4 {
   width: 580px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-4 {
   height: 580px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
@@ -3626,12 +3592,10 @@
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-span-5 {
   width: 740px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-5 {
   height: 740px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-4 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
@@ -3645,7 +3609,6 @@
 .app-tray:not(.app-open).spacing-5 > .app:not(.active) {
   width: 100px;
   height: 100px;
-  border-radius: 25px;
   margin: 35px;
 }
 
@@ -3660,12 +3623,10 @@
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-span-2 {
   width: 270px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-2 {
   height: 270px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-2 > .app-header.app-icon {
@@ -3674,12 +3635,10 @@
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-span-3 {
   width: 440px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-3 {
   height: 440px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-3 > .app-header.app-icon {
@@ -3688,12 +3647,10 @@
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-span-4 {
   width: 610px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-4 {
   height: 610px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-4 > .app-header.app-icon {
@@ -3702,12 +3659,10 @@
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-span-5 {
   width: 780px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-5 {
   height: 780px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open).spacing-5 > .app:not(.active).app-height-span-5 > .app-header.app-icon {
@@ -3716,12 +3671,10 @@
 
 .app-tray:not(.app-open) > .app:not(.active).app-span-2 {
   width: 230px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-2 {
   height: 230px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-2 > .app-header.app-icon {
@@ -3730,12 +3683,10 @@
 
 .app-tray:not(.app-open) > .app:not(.active).app-span-3 {
   width: 360px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-3 {
   height: 360px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-3 > .app-header.app-icon {
@@ -3744,12 +3695,10 @@
 
 .app-tray:not(.app-open) > .app:not(.active).app-span-4 {
   width: 490px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-4 {
   height: 490px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-4 > .app-header.app-icon {
@@ -3758,12 +3707,10 @@
 
 .app-tray:not(.app-open) > .app:not(.active).app-span-5 {
   width: 620px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-5 {
   height: 620px;
-  border-radius: 25px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).app-height-span-5 > .app-header.app-icon {
@@ -3775,6 +3722,12 @@
   height: 100px;
   border-radius: 25px;
   position: relative;
+  margin: 15px;
+}
+
+.app-tray:not(.app-open).spacing-5 > .app:not(.active) > .app-title {
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active).glass:after {
