--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -46,26 +46,22 @@
   position: relative;
 }
 
-.app-tray.app-open.blured:after {
-  content: "";
-  position: relative;
-  left: 0;
-  right: 0;
-  background-color: white;
-  opacity: 0.7;
-  display: block;
-  width: 100%;
-  height: 100%;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+.app-tray.app-open.blured:before {
+    position: absolute;
+    display: block;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+    content:"";                 /*adjust brightness here */
+    background: hsla(0, 0%, 0%,     0.7);
+     background-color: white;
 }
 
-.app-tray.app-open.blured.blured-dark:after {
+.app-tray.app-open.blured.blured-dark:before{
   background-color: black;
-  opacity: 0.3;
+  background: hsla(0, 0%, 0%,     0.7);
 }
 
 .app-tray:not(.app-open) > .app > .app-title {
